--- a/site/styles.css
+++ b/site/styles.css
@@ -258,3 +258,19 @@ pre {
     width: 1.75em;
   }
 }
+
+
+/** Page list */
+ul.page-list {
+  list-style-type: none;
+  padding: 0;
+
+  li:not(:first-child) :is(h1, h2, h3) {
+    margin-top: 1.2em;
+  }
+
+  li a {
+    color: var(--color);
+    text-decoration: none;
+  }
+}
